delete some extra file

--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
-<html  class="loading"  lang="en-US"><!--------ملت وب مرجع خرید و فروش و همچنین انواع قالب های وردپرس و html mellatweb.com------------->
+<html  class="loading"  lang="en-US">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
-    <title>PRO Card - Material Resume / CV / vCard Template</title>
+    <title>Amirmohammad Shams Resume</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="description" content="PRO Card - Material Resume / CV / vCard Template" />
-    <meta name="keywords" content="vcard, resposnive, retina, resume, jquery, css3, bootstrap, Material CV, portfolio" />
-    <meta name="author" content="lmtheme" />
     <link rel="shortcut icon" href="favicon.ico">
 
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
