add pics of portfolio

--- a/index.html
+++ b/index.html
@@ -329,12 +329,12 @@
                       <!-- /Portfolio Item 2 -->
 
                       <!-- Portfolio Item 3 -->
-                      <figure class="item" data-groups='["all","illustration"]'>
-                        <a href="images/portfolio/full/3.jpg" class="lightbox" title="Duis Eu Eros Viverra">
-                          <img src="images/portfolio/3.jpg" alt="">
+                      <figure class="item" data-groups='["all","Flutter"]'>
+                        <a href="images/portfolio/full/portfolioPic1.jpeg" class="lightbox" title="Hello7">
+                          <img src="images/portfolio/portfolioPic1Small.jpeg" alt="">
                           <div>
-                            <h5 class="name">Project Name</h5>
-                            <small>Illustration</small>
+                            <h5 class="name">Hello7</h5>
+                            <small>Flutter</small>
                             <i class="fa fa-image"></i>
                           </div>
                         </a>
@@ -345,12 +345,12 @@
           
 
                       <!-- Portfolio Item 5 -->
-                      <figure class="item" data-groups='["all", "illustration"]'>
-                        <a href="images/portfolio/full/5.jpg" class="lightbox" title="Aliquam Condimentum Magna Rhoncus">
-                          <img src="images/portfolio/5.jpg" alt="">
+                      <figure class="item" data-groups='["all", "Flutter"]'>
+                        <a href="images/portfolio/full/portfolioPic2.jpeg" class="lightbox" title="Hello7">
+                          <img src="images/portfolio/portfolioPic2Small.jpeg" alt="">
                           <div>
-                            <h5 class="name">Project Name</h5>
-                            <small>Illustration</small>
+                            <h5 class="name">Hello7</h5>
+                            <small>Flutter</small>
                             <i class="fa fa-image"></i>
                           </div>
                         </a>
@@ -359,12 +359,12 @@
 
 
                       <!-- Portfolio Item 9 -->
-                      <figure class="item" data-groups='["all","illustration"]'>
-                        <a href="images/portfolio/full/9.jpg" class="lightbox" title="Mauris Neque Dolor">
-                          <img src="images/portfolio/9.jpg" alt="">
+                      <figure class="item" data-groups='["all","Flutter"]'>
+                        <a href="images/portfolio/full/portfolioPic3.jpeg" class="lightbox" title="Dido">
+                          <img src="images/portfolio/portfolioPic3Small.jpeg" alt="">
                           <div>
-                            <h5 class="name">Project Name</h5>
-                            <small>Illustration</small>
+                            <h5 class="name">Dido</h5>
+                            <small>Flutter</small>
                             <i class="fa fa-image"></i>
                           </div>
                         </a>
@@ -375,12 +375,80 @@
                       <!-- /Portfolio Item 10 -->
 
                       <!-- Portfolio Item 11 -->
-                      <figure class="item" data-groups='["all","illustration"]'>
-                        <a href="images/portfolio/full/11.jpg" class="lightbox" title="Duis Eu Eros Viverra">
-                          <img src="images/portfolio/11.jpg" alt="">
+                      <figure class="item" data-groups='["all","Flutter"]'>
+                        <a href="images/portfolio/full/portfolioPic4.jpeg" class="lightbox" title="Dido">
+                          <img src="images/portfolio/portfolioPic4Small.jpeg" alt="">
                           <div>
-                            <h5 class="name">Project Name</h5>
-                            <small>Illustration</small>
+                            <h5 class="name">Dido</h5>
+                            <small>Flutter</small>
+                            <i class="fa fa-image"></i>
+                          </div>
+                        </a>
+                      </figure>
+
+
+                      <figure class="item" data-groups='["all","Flutter"]'>
+                        <a href="images/portfolio/full/portfolioPic5.jpeg" class="lightbox" title="Zaryad">
+                          <img src="images/portfolio/portfolioPic5Small.jpeg" alt="">
+                          <div>
+                            <h5 class="name">Zaryad</h5>
+                            <small>Flutter</small>
+                            <i class="fa fa-image"></i>
+                          </div>
+                        </a>
+                      </figure>
+
+
+                      <figure class="item" data-groups='["all","Flutter"]'>
+                        <a href="images/portfolio/full/portfolioPic6.jpeg" class="lightbox" title="Zaryad">
+                          <img src="images/portfolio/portfolioPic6Small.jpeg" alt="">
+                          <div>
+                            <h5 class="name">Zaryad</h5>
+                            <small>Flutter</small>
+                            <i class="fa fa-image"></i>
+                          </div>
+                        </a>
+                      </figure>
+
+                      <figure class="item" data-groups='["all","Flutter"]'>
+                        <a href="images/portfolio/full/portfolioPic7.jpeg" class="lightbox" title="turLister">
+                          <img src="images/portfolio/portfolioPic7Small.jpeg" alt="">
+                          <div>
+                            <h5 class="name">turLister</h5>
+                            <small>Flutter</small>
+                            <i class="fa fa-image"></i>
+                          </div>
+                        </a>
+                      </figure>
+
+                      <figure class="item" data-groups='["all","Flutter"]'>
+                        <a href="images/portfolio/full/portfolioPic8.jpeg" class="lightbox" title="turLister">
+                          <img src="images/portfolio/portfolioPic8Small.jpeg" alt="">
+                          <div>
+                            <h5 class="name">turLister</h5>
+                            <small>Flutter</small>
+                            <i class="fa fa-image"></i>
+                          </div>
+                        </a>
+                      </figure>
+
+                      <figure class="item" data-groups='["all","Flutter"]'>
+                        <a href="images/portfolio/full/portfolioPic9.jpeg" class="lightbox" title="Care4us">
+                          <img src="images/portfolio/portfolioPic9Small.jpeg" alt="">
+                          <div>
+                            <h5 class="name">Care4us</h5>
+                            <small>Flutter</small>
+                            <i class="fa fa-image"></i>
+                          </div>
+                        </a>
+                      </figure>
+
+                      <figure class="item" data-groups='["all","Flutter"]'>
+                        <a href="images/portfolio/full/portfolioPic10.jpeg" class="lightbox" title="Care4us">
+                          <img src="images/portfolio/portfolioPic10Small.jpeg" alt="">
+                          <div>
+                            <h5 class="name">Care4us</h5>
+                            <small>Flutter</small>
                             <i class="fa fa-image"></i>
                           </div>
                         </a>
